--- a/aliya.html
+++ b/aliya.html
@@ -22,8 +22,31 @@
     
   </div>
 
-  <h1 style="text-align: center;font-size: 35px;color: #800000;"><b>С днем рождения 🎉</b></h1>
+  <h1 style="text-align: center;font-size: 45px;color: #800000;"><b>Туған күніңізбен🎉</b></h1>
 
-  <p style="text-align: center;font-size: 20px;">Моя прекрасная мамочка, поздравляю тебя с днем рождения! От всего сердца хочу пожелать тебе прекрасного настроения, восхитительных впечатлений, крепкого здоровья. Пусть все твои надежды оправдаются, мечты исполнятся, как по волшебству. Пусть каждый день приносит радость, тепло и вдохновение. </p>
+  <p style="text-align: center;font-size: 25px;">Мама, папа!<br> Жас қосуларыңызбен! Аллах берекелі ғұмыр берсін. *Тілерім сіздерге берік иман*,  қабыл болған дұға-тілектеріңіз, құлшылықтарыңыз көп болсын!<br>
+    *Екіншіден тілерім, саулық.* Дендеріңіздің саулығы, жандарыңыздың саулығы, эмоциональный, психологический … бүкіл саулықтың барлығын тілеймін. Қайратты қуатты болыңыздар. Ауруларыңыз болса, Аллах өзі шипа берсін! Өз аяқтарыңызбен үлкен қажылыққа барып, үлкен құлшылық жасап қайтуды нәсіп етсін!<br>
+    *Тілерім үшіншіден, мол байлық.* “Байлық” сөзі өзіне не қосса, соның барлығын тілеймін. Дүниемен келген, баламен келген байлық, туған-туысыңмен байлық, рухани байлық, барлығы, барлығы …<br>
+    Әр күндеріңіз қуаныш пен бақытты сәттерге толы болсын! Бізбен ақылдарыңызбен, өмірлік тәжірбиелеріңізбен бөлісіп, бізге үлгі болып жүре беріңіздер!<br>
+    <br>
+    Эй халайық! Бақыттымын, неге деші?<br>
+    Елер біреу, бар шығар елемесі.<br>
+    Екі анам бар естимісің екеуі бар,<br>
+    Ерек маған бұл жандардың ережесі.<br>
+    <br>
+    Бірі анам өмірге əкеп тербеткен ,<br>
+    Аялаған, сусындатқан шербетпен.<br>
+    Бірі анам сүйіктімді сыйлаған ,<br>
+    Сый қып маған көкке қанат серметкен.<br>
+    <br>
+    Аналарым жүзден ассын жасыңыз,<br>
+    Тойлаңыздар, марқайып бір тасыңыз.<br>
+    Дастарханға тек жақсылық сылтау боп<br>
+    Көл көсір боп толып тұрсын асыңыз.<br>
+    <br>
+    Біз сіздерді қуантамыз бір жүріп ,<br>
+    Реніш жоқ, жымиямыз тек күліп.<br>
+    Күйеу бала еді дегізбей<br>
+    Балаларым дегізерміз тік тұрып.<br> </p>
 </body>
 </html>
