--- a/mako.html
+++ b/mako.html
@@ -22,8 +22,22 @@
     
   </div>
 
-  <h1 style="text-align: center;font-size: 35px;color: #800000;"><b>С днем рождения 🎉</b></h1>
+  <h1 style="text-align: center;font-size: 45px;color: #800000;"><b>Туған күніңізбен 🎉</b></h1>
 
-  <p style="text-align: center;font-size: 20px;">Моя прекрасная мамочка, поздравляю тебя с днем рождения! От всего сердца хочу пожелать тебе прекрасного настроения, восхитительных впечатлений, крепкого здоровья. Пусть все твои надежды оправдаются, мечты исполнятся, как по волшебству. Пусть каждый день приносит радость, тепло и вдохновение. </p>
+  <p style="text-align: center;font-size: 25px;">Мама! <br>
+    Өмір өзіңізден бастау алған!<br>
+    Мен сіздерге арнап қанша мақтау, мадақтау айтсам да жеткіліксіз. Папа екеуіңізге басымды иіп, алғысымды білдіремін.
+    Балғын дәурен балалық шағымыздың уайым-қайғысыз бақытты өткені сіздердің арқаларыңыз, рахмет! 
+    Адалдықты өмірлік ұстаным етіп бойға сіңіргендеріңізге рахмет!<br>
+    Төрт бауыр (қазір жетеу болған) төрт жақта жүрсек те, бір-бірімізге деген көңіліміз ашық, бірлігіміз мол, сағынысып қауышуға асықпыз. Бұл да сіздер берген тәрбиеден бастау алған, рахмет!
+    Бүгінде сіздер салған жол, көрсеткен үлгі өнегемен біздер жүріп келеміз. Және ол үлгі ұрпақтан-ұрпаққа сабақтасар, жылдар өтсе де жалғасын табар тәлім-тәрбие деп білемін!  
+    Торыққанда- ақылшымыз, жабыққанда-сағынышымыз, өзіңізсіздер! <br>
+    Мама, осынау айтулы күн тек жылы лебіздердің айтылуына себеп болсын!Мейірім шашқан нұрлы жүзіңізді мұң шалмасын, көңіліңізге енді ешқашан кірбің түспесін (біз де түсірмеуге тырысамыз). Әрқашан жүрген ортаңызда мерейіңіз үстем болып, қуанышқа кенеліп жүре беріңіз!
+    <br>
+    Жанның тыныштығы мен тәннің саулығы үйлесім тауып, күш-қуаттарыңыз азаймай, әкемізбен бірге бақытты ұзақ ғұмыр кешулеріңізді тілейміз!
+    <br>
+    Жиен немерелеріңіз сіздерді қатты жақсы көретін болады, себебі олардың ата-анасы сіздерді жақсы көреді, құрмет тұтады!
+    <br>
+    Ыстық ықыласпен: Ғалымбек-Мако</p>
 </body>
 </html>
