--- a/bauka.html
+++ b/bauka.html
@@ -22,8 +22,8 @@
     
   </div>
 
-  <h1 style="text-align: center;font-size: 35px;color: #800000;"><b>С днем рождения 🎉</b></h1>
-
-  <p style="text-align: center;font-size: 20px;">Моя прекрасная мамочка, поздравляю тебя с днем рождения! От всего сердца хочу пожелать тебе прекрасного настроения, восхитительных впечатлений, крепкого здоровья. Пусть все твои надежды оправдаются, мечты исполнятся, как по волшебству. Пусть каждый день приносит радость, тепло и вдохновение. </p>
+  <h1 style="text-align: center;font-size: 35px;color: #800000;"><b>Туған күніңізбен 🎉</b></h1>
+<img src="img/fam49.jpg" class="center">
+  <p style="text-align: center;font-size: 35px;">Келесіге өтіңіз ;) </p>
 </body>
 </html>
