--- a/mail.html
+++ b/mail.html
@@ -38,44 +38,29 @@
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card-body">
-            <img src="img/photo10.jpg">
-          <a href="papa.html" class="btn btn-primary">Читать сообщение</a>
+            <img src="img/fam66.jpg">
+          <a href="bauka.html" class="btn btn-primary">Читать сообщение</a>
         </div>
       </div>
     </div>
     <div class="col-sm-3">
         <div class="card text-center">
           <div class="card-body">
-            <img src="img/photo7.jpg">
-            <a href="mako.html" class="btn btn-primary">Читать сообщение</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="card text-center">
-          <div class="card-body">
-            <img src="img/photo8.jpg">
-            <a href="bauka.html" class="btn btn-primary">Читать сообщение</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-3">
-        <div class="card text-center">
-          <div class="card-body">
-              <img src="img/photo9.jpg">
-            <a href="nazken.html" class="btn btn-primary">Читать сообщение</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="card text-center">
-          <div class="card-body">
-              <img src="img/photo6.jpg">
+            <img src="img/fam67.jpg">
             <a href="aliya.html" class="btn btn-primary">Читать сообщение</a>
           </div>
         </div>
       </div>
+   
+      <div class="col-sm-3">
+        <div class="card text-center">
+          <div class="card-body">
+              <img src="img/fam68.jpg">
+            <a href="mako.html" class="btn btn-primary">Читать сообщение</a>
+          </div>
+        </div>
+      </div>
+      
       <div class="col-sm-3">
           <div class="card text-center">
             <div class="card-body">
@@ -88,14 +73,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
-          <div class="card text-center">
-            <div class="card-body">
-              <img src="img/photo11.jpg">
-              <a href="#" class="btn btn-primary">Читать сообщение</a>
-            </div>
-          </div>
-        </div>
+        
   </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
