--- a/mail.html
+++ b/mail.html
@@ -38,7 +38,7 @@
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card-body">
-            <img src="img/fam66.jpg">
+            <img src="img/FAM66.jpg">
           <a href="bauka.html" class="btn btn-primary">Читать сообщение</a>
         </div>
       </div>
@@ -46,7 +46,7 @@
     <div class="col-sm-3">
         <div class="card text-center">
           <div class="card-body">
-            <img src="img/fam67.jpg">
+            <img src="img/FAM67.jpg">
             <a href="aliya.html" class="btn btn-primary">Читать сообщение</a>
           </div>
         </div>
@@ -55,7 +55,7 @@
       <div class="col-sm-3">
         <div class="card text-center">
           <div class="card-body">
-              <img src="img/fam68.jpg">
+              <img src="img/FAM68.jpg">
             <a href="mako.html" class="btn btn-primary">Читать сообщение</a>
           </div>
         </div>
