--- a/meru.html
+++ b/meru.html
@@ -22,8 +22,12 @@
     
   </div>
 
-  <h1 style="text-align: center;font-size: 35px;color: #800000;"><b>С днем рождения 🎉</b></h1>
+  <h1 style="text-align: center;font-size: 45px;color: #800000;"><b>С днем рождения 🎉</b></h1>
 
-  <p style="text-align: center;font-size: 20px;">Моя прекрасная мамочка, поздравляю тебя с днем рождения! От всего сердца хочу пожелать тебе прекрасного настроения, восхитительных впечатлений, крепкого здоровья. Пусть все твои надежды оправдаются, мечты исполнятся, как по волшебству. Пусть каждый день приносит радость, тепло и вдохновение. </p>
+  <p style="text-align: center;font-size: 25px;">Мама туған күніңізбен! <br>Ең бастысы деніңіз сау болсын жылдан-жылға өйстіп туган күннен туған күнге аман есен жете берейік. Жүзіңізден никогда күлкі кетпесін, каждый күніңіз бақытты сәттерге толы болсын. Әр нәрсені уайымдай бермеңіз. Папа екеуіңізге алғысым шексіз мені ештеңеден тарықтырмай өсіріп, өзіме ұнаған затпен айналысып, таңдау жасауға мүмкіндік бергендеріңізге. Аллаға алғысым шексіз маған осындай сіздердің қыздарыңыз болып туылуға мүмкіндік берген.
+    <br><br>Уааау тілек жаза алмайды екем мама, дымда ренжімеңіз главное сіздерді жақсы көретінімді білесіздер деген үміттемін. Білмесеңіздер қайтып айтам. Барлық жасаган заттарыңызға рақмет и мен сіздерді люблю до луны и обратно♥. Маған артқан үміттеріңізді ақтауға тырысам но не отвечаю хаха. Ойстип жылдан жылға жете берейік, бақытты боп ヾ(≧▽≦*)o.
+    <br><br>от единственной и неповторимой, незаменимой, великолепной, никогда не прежней, талантливой, блестящей, невероятной, удивительной, совершенно уникальной Меруерт 🥰.
+    <br><br>
+    </p>P/s:Оқыған адамдар неғыса каспиге менің қорыма ақша лақтырып жіберіңіздерші. (дымда уайымдамаңыздар жіберген ақшаларыңыз жақсы бағытта жұмсалады;)) 
 </body>
 </html>
