--- a/aliya.html
+++ b/aliya.html
@@ -28,6 +28,7 @@
     *Екіншіден тілерім, саулық.* Дендеріңіздің саулығы, жандарыңыздың саулығы, эмоциональный, психологический … бүкіл саулықтың барлығын тілеймін. Қайратты қуатты болыңыздар. Ауруларыңыз болса, Аллах өзі шипа берсін! Өз аяқтарыңызбен үлкен қажылыққа барып, үлкен құлшылық жасап қайтуды нәсіп етсін!<br>
     *Тілерім үшіншіден, мол байлық.* “Байлық” сөзі өзіне не қосса, соның барлығын тілеймін. Дүниемен келген, баламен келген байлық, туған-туысыңмен байлық, рухани байлық, барлығы, барлығы …<br>
     Әр күндеріңіз қуаныш пен бақытты сәттерге толы болсын! Бізбен ақылдарыңызбен, өмірлік тәжірбиелеріңізбен бөлісіп, бізге үлгі болып жүре беріңіздер!<br>
+    
     <br>
     Эй халайық! Бақыттымын, неге деші?<br>
     Елер біреу, бар шығар елемесі.<br>
@@ -47,6 +48,23 @@
     Біз сіздерді қуантамыз бір жүріп ,<br>
     Реніш жоқ, жымиямыз тек күліп.<br>
     Күйеу бала еді дегізбей<br>
-    Балаларым дегізерміз тік тұрып.<br> </p>
+    Балаларым дегізерміз тік тұрып.<br> 
+    Ізгі ниетпен, күйеу *балаларыңыз* Мейірім.
+    <br>
+    <br>
+    Көз алдыма кішкентай кезімдегі сәттер келіп отыр. Үйдегі диванның екі креслосы бөлек тұрушы еді. Бұрынғы үйдің бөлмелері көз алдыма әлсін әлсін келіп тұрады,  қателеспесем жатын бөлмеге барар жолдағы бір бөлме болса керек. Операциядан кейінгі үйге келген сәтім. <br>
+Әлгі креслоның астына кіріп, өкісігімді баса алмай жылап жатырмын. Осы кезден бастап сен жылауық боп кеткенсің деп айтушы еді. Расымен де бұл кез санамда қатты қалып кетіпті. <br>
+Бұл сәтті есіме алсам, тек қана менің жылап жатқаным емес, мамамның зыр жүгіріп екі ортада аласапарып дастархан жасап жатқаны, от жағып, сиыр сауып, қонақ күтіп, жұмыстың қағазын толтырып, Атаның жағдайын жасап, бітпейтін тірліктен бас алмай жатқанының барлығы жадымда екендігін байқадым. <br>
+
+Мамам екеуміздің көзқарасым әр түрлі адамдар екенбіз.  Бұрындары балаға бөлек назарыңды бөлу керек деп есептесем, мына көріністен соң анамның қаншалықты жан жақты, дана болғанын түсінемін. Айқайының артында бізге деген мейірім мен жанашырлық, біздің болашағымызға алаңдау мен аналық махаббат жатқандығын ұғынамын.  Осы балалық шағым қазіргі менің Мен болып қалыптасуыма зор ықпал етті. <br>
+
+Есімде, мен жарыстарға қатысып, қобалжып дайындық жасап жүргенде, оңашада дайындалсын деп, есікті қымтап, үй шаруасын өзіңіз жасап, тіпті менің киімдерімді жуып, үтіктеп дайындап қоятын кездеріңіз. Папам екеуіңіздің Сөзбен де іспен де, жасырын да айқын да мені қолдаған кездеріңіз бәрі есімде. Сіздермен арадағы айтылмайтын махаббат пен тылсым байланыс- жаныма тірек болып келеді. Бұл тірек мені әлі талай шыңдар мен биіктерге апаратынына сенімдімін. 
+<br>
+
+Папам екеуіңіз біз үшін жол бағыттайтын шамшырақсыздар, сіздерге қарап отбасының қандай болу керектігін түсіндім, сіздердің дұғаларыңыз болар, алхамдуллилях қазір дүниедегі ең бақытты адам сезінемін өзімді. 
+<br>
+Сіздердің әрбір істеген істеріңіз, бізге көрсеткен мейірімдеріңіз, ата-аналарыңызға көрсеткен қызметтеріңіз алдарыңыздан жұмаққа кірер себеп болып келсінші!!! <br>
+Папам екеуіңіз денсаулықтарыңыз мықты боп, бақытты, мағыналы ұзақ ғұмыр кешіңіздер! Айтпасам да мен сіздерді жақсы көремін!!!<br>
+Ізгі ниетпен, Әлия.</p>
 </body>
 </html>
